fixed logo slider alignment

--- a/themes/unya/sass/_media.scss
+++ b/themes/unya/sass/_media.scss
@@ -163,7 +163,7 @@ object {
 .logo-carousel{
 	margin:0 auto;
 	height:300px;
-	width:90vw;
+	padding:0;
 }
 .partner{
 	margin: auto auto;
